# claude-task-master-ui

./: .gitignore  README.md
backend/: .gitignore  package-lock.json  package.json  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: base.py
backend/app/api/v1/: chat.py  enhanced_projects.py  file_management.py  project_files.py  router.py  task_generation.py
backend/app/core/: config.py  exceptions.py  logging_config.py
backend/app/database/: schemas.py  tinydb_handler.py
backend/app/models/: __init__.py  responses.py  schemas.py
backend/app/services/: __init__.py  enhanced_project_service.py  file_storage_service.py  gemini_service.py  prd_generation_service.py  project_overview_generator.py  task_generator.py  task_integration_service.py  task_master_service.py
backend/app/services/prompts/: __init__.py  prompt_manager.py
data/: project_files.json  projects.json
frontend/: .env  .prettierignore  daisyui.js  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AnalysisStream.tsx  ProjectAnalysisStatus.tsx  ProjectCreateModal.tsx  index.ts
frontend/src/components/TaskGeneration/: TaskDisplayPanel.tsx  TaskGenerationInterface.tsx  index.ts
frontend/src/components/layouts/: AuthLayout.tsx  DashboardLayout.tsx  RootLayout.tsx
frontend/src/components/navigation/: Breadcrumbs.tsx  Header.tsx  Sidebar.tsx
frontend/src/components/projects/: EnhancedProjectDetail.tsx  ProjectFilesDisplay.tsx  ProjectOverviewDisplay.tsx  SimpleProjectForm.tsx
frontend/src/components/providers/: ThemeProvider.tsx
frontend/src/components/ui/: ConfirmationDialog.tsx  ErrorBoundary.tsx  (+1 more)
frontend/src/contexts/: ThemeContext.tsx
frontend/src/pages/: DashboardPage.tsx  ErrorPage.tsx  HomePage.tsx  NotFoundPage.tsx  ProjectDetailPage.tsx  ProjectsPage.tsx  index.ts
frontend/src/router/: index.tsx
frontend/src/services/: api.ts  chat.ts  health.ts  index.ts  projectFiles.ts  projects.ts  taskMasterService.ts
frontend/src/types/: api.ts  common.ts  index.ts
frontend/src/utils/: api.ts  cn.ts  format.ts  index.ts  storage.ts  validation.ts
